--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "@/*": ["src/*"],
     "@public": ["public"]
   },
-  "include": ["src"],
+  "include": ["src", "src/**/*.ts", "src/**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
