--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.5",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -26,7 +28,8 @@
     "react-toastify": "^10.0.4",
     "recharts": "^2.12.1",
     "viem": "^2.7.11",
-    "wagmi": "^2.5.7"
+    "wagmi": "^2.5.7",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
