--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.5",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
     "react-jazzicon": "^1.0.4",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
@@ -32,6 +33,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
