--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
+    "ethers": "^6.11.1",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.5",
     "mobx": "^6.12.0",
