--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prettier": "^2.8.8",
     "pretty-quick": "^4.0.0",
     "sass": "^1.71.1",
+    "terser": "^5.29.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-svg-icons": "^2.0.1",
