--- a/package.json
+++ b/package.json
@@ -1,78 +1,48 @@
 {
   "name": "rebalance",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.1",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@tanstack/react-query": "^5.22.2",
-    "axios": "^1.6.7",
+    "@tanstack/react-query": "^5.28.6",
+    "@types/react-router-dom": "^5.3.3",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
     "ethers": "^6.11.1",
     "formik": "^2.4.5",
-    "framer-motion": "^11.0.5",
-    "mobx": "^6.12.0",
-    "mobx-react-lite": "^4.0.5",
+    "framer-motion": "^11.0.20",
+    "mobx": "^6.12.1",
+    "mobx-react-lite": "^4.0.6",
+    "net": "^1.0.2",
+    "next": "14.1.4",
     "numeral": "^2.0.6",
-    "react": "^18.2.0",
+    "react": "^18",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18",
     "react-jazzicon": "^1.0.4",
-    "react-router-dom": "^6.22.1",
-    "react-toastify": "^10.0.4",
-    "recharts": "^2.12.1",
-    "viem": "^2.8.5",
-    "wagmi": "^2.5.7",
-    "yup": "^1.3.3"
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.3",
+    "viem": "^2.8.18",
+    "wagmi": "^2.5.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20",
     "@types/numeral": "^2.0.5",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^4.0.0",
-    "sass": "^1.71.1",
-    "terser": "^5.29.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vite-tsconfig-paths": "^4.3.1"
-  },
-  "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "eslint --fix",
-      "pretty-quick --staged",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "encoding": "^0.1.13",
+    "pino-pretty": "^11.0.0",
+    "sass": "^1.72.0",
+    "typescript": "^5"
   }
 }
