--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "net": "^1.0.2",
     "next": "14.1.4",
     "numeral": "^2.0.6",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
