--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chainlink/contracts": "^1.1.1",
+    "@chainlink/contracts": "^0.8.0",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
@@ -19,7 +19,7 @@
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
-    "ethers": "^6.11.1",
+    "ethers": "^5.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.3",
     "mobx": "^6.12.1",
@@ -35,8 +35,9 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.3",
-    "viem": "^2.8.18",
-    "wagmi": "^2.5.12",
+    "sharp": "^0.33.4",
+    "viem": "^0.2.1",
+    "wagmi": "^0.12.19",
     "yup": "^1.4.0"
   },
   "devDependencies": {
