--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.28.6",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
     "ethers": "^6.11.1",
