--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.10",
+    "decimal.js-light": "^2.5.1",
     "ethers": "^6.11.1",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.3",
