--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-jazzicon": "^1.0.4",
+    "react-joyride": "^2.8.2",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.3",
