--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@rainbow-me/rainbowkit": "^2.1.7",
     "@tanstack/react-query": "^5.28.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
