--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@magic-ext/oauth": "^22.16.0",
     "@magiclabs/wagmi-connector": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@tanstack/react-query": "^5.28.6",
