--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.11.0",
     "@magic-ext/oauth": "^22.16.0",
     "@magiclabs/wagmi-connector": "^2.0.0",
@@ -34,6 +34,7 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-jazzicon": "^1.0.4",
     "react-joyride": "^2.8.2",
     "react-router-dom": "^6.22.3",
